--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,18 @@
   "manifest_version": 2,
   "description": "Enhance the editor functionality of Databricks notebook",
   "icons": {
-    "48": "db_logo_red.png"
+    "48": "logo.png"
   },
   "content_scripts": [
     {
       "matches": ["https://*.databricks.com/*"],
-      "js": ["content-script.js"],
-      "css": ["css/editor.css", "css/markdown.css", "css/cell.css"],
+      "css": [
+        "css/editor.css",
+        "css/markdown.css",
+        "css/cell.css",
+        "css/navbar.css",
+        "css/body.css"
+      ],
       "run_at": "document_idle"
     }
   ],
