--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Databricks Notebook Enhancer",
+  "name": "DBDark",
   "version": "0.1",
   "manifest_version": 2,
-  "description": "Enhance the editor functionality of Databricks notebook",
+  "description": "Dark theme for Databricks notebooks",
   "icons": {
     "48": "logo.png"
   },
@@ -18,6 +18,5 @@
       ],
       "run_at": "document_idle"
     }
-  ],
-  "web_accessible_resources": ["main.js"]
+  ]
 }
