--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,10 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.databricks.com/*"],
+      "matches": [
+        "https://*.databricks.com/*",
+        "https://*.azuredatabricks.net/*"
+      ],
       "css": [
         "css/editor.css",
         "css/markdown.css",
