--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "DBDark",
   "version": "0.2.6",
   "manifest_version": 2,
-  "description": "A Chrome extension to apply a dark theme on Databricks",
+  "description": "Dark theme for Databricks",
   "icons": {
     "48": "img/logo.png"
   },
