--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,24 +8,11 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.databricks.com/*", "https://*.azuredatabricks.net/*"],
-      "css": [
-        "css/editor.css",
-        "css/markdown.css",
-        "css/cell.css",
-        "css/widget.css",
-        "css/body.css",
-        "css/history-panel.css",
-        "css/topbar.css",
-        "css/context-bar.css",
-        "css/sidebar.css",
-        "css/filebrowser-panel.css",
-        "css/data-panel.css",
-        "css/search-panel.css",
-        "css/user-menu.css",
-        "css/help-menu.css",
-        "css/shorcuts.css"
+      "matches": [
+        "https://*.databricks.com/*",
+        "https://*.azuredatabricks.net/*"
       ],
+      "css": ["index.css"],
       "run_at": "document_idle"
     }
   ]
