--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Chrome extension to apply a dark theme on Databricks.",
   "main": "index.js",
   "scripts": {
-    "build": "node-sass src/scss/index.scss -o src",
-    "dev": "node-sass -w src/scss/index.scss -o src"
+    "build": "node-sass src/scss/index.scss -o dist",
+    "dev": "node-sass -w src/scss/index.scss -o dist"
   },
   "repository": {
     "type": "git",
