--- a/.github/lint.yml
+++ b/.github/lint.yml
@@ -7,10 +7,10 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: '12'
       - uses: actions/cache@v1
         with:
           path: ~/.npm
